Mejoras en las actualizaciones para Areas